--- a/index.html
+++ b/index.html
@@ -1,1 +1,94 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+<style>
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{background-image: url('https://cdn.eventplanner.net/imgs/rt8060_5-colour-tips-on-how-to-decorate-your-event@2x.jpg');
+background-repeat: no-repeat;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-size: cover;
+}
+
+
+
+
+.container{display: flex;
+flex-direction: column;
+width: 500px;
+padding:10px;
+border: 1px solid rgb(13, 106, 245);
+border-radius: 5px;
+}
+
+input{
+    margin: 5px 0px;
+    height: 35px;
+    padding:7px;
+
+}
+
+button{
+    height: 35px;
+    margin: 5px 0px;
+    box-flex-group: skyblue;
+    border: none;
+    border-radius: 5px;
+    color: #333;}
+    button:hover{
+        background-color: #333;
+        color:skyblue;
+
+    }
+
+.image{
+    align-items: center;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+</style>
+
+
+
+
+</head>
+<body>
+
+
+
+
+
+
+
+
+
+    <div class="container">
+
+    <div class="image">
+        <img src="https://www.liblogo.com/img-logo/en7384eff2-entergy-logo-entergy-reveals-new-brand-identity-logo.png" height="80px"    width=" 150px" alt="" >
+    </div>
+<input type="email" placeholder="email"
+
+name="" id="">
+<input type="password" placeholder="password"
+
+name="password" id="password">
+<button>Login</button>
+</div>
+
+</body>
+</html>
